# NewAnswer18

./: CMakeLists.txt  MediaDatabse.cpp  MediaDatabse.h  MediaExtractor.cpp  MediaExtractor.h  MediaScanner.cpp  MediaScanner.h  README.md  Songs.cpp  Songs.h  main.cpp
